@@ -1,5 +1,9 @@
 2002-12-04  James Henstridge  <james@daa.com.au>
 
+	* src/font-view.c (main): get font to render correctly.  Things
+	work fine now that I am using the same FT_Library handle as Xft
+	was ...
+
 	* src/font-view.c (main): start of simple font viewer program.
 	Doesn't correctl display the text yet though :(
 
